kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloud-native-devops-service
  namespace: devops-platform

spec:
  selector:
    app: cloud-native-devops

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: NodePort
